--- a/Library.csproj
+++ b/Library.csproj
@@ -123,10 +123,10 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Library.mdf">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
     <Content Include="Library_log.ldf">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       <DependentUpon>Library.mdf</DependentUpon>
     </Content>
   </ItemGroup>
